--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "mkakpabla/shoppingcart",
+    "name": "mkakpabla/session-shoppingcart",
     "type": "library",
     "authors": [
         {
